--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -2,3 +2,7 @@ spring.datasource.url=jdbc:postgresql://localhost:5432/meuestudos
 spring.datasource.username=postgres
 spring.datasource.password=gabriel
 spring.datasource.driver-class-name=org.postgresql.Driver
+
+spring.jpa.hibernate.ddl-auto=none
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true 
